--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,3 +1,15 @@
-asgiref==3.7.2
-Django==4.2.5
-sqlparse==0.4.4
+Package           Version
+----------------- ---------
+asgiref           3.7.2
+certifi           2023.7.22
+Django            4.2.5
+django-admin-volt 1.0.10
+Faker             19.6.2
+Pillow            10.0.1
+pip               23.2.1
+python-dateutil   2.8.2
+sentry-sdk        1.31.0
+setuptools        65.5.1
+six               1.16.0
+sqlparse          0.4.4
+urllib3           2.0.5
