--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,9 @@ GitHub.sublime-settings
 .history.idea
 .vscode
 .idea
+core/apps/google_client_secret.json
+core/apps/service_account_django_tabler.json
+core/apps/service_account_django_tabler_owner.json
+core/google_client_secret.json
+core/service_account_django_tabler.json
+core/service_account_django_tabler_owner.json
