--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,19 +1,47 @@
-Package           Version
------------------ ---------
-asgiref           3.7.2
-certifi           2023.7.22
-Django            4.2.5
-django-admin-volt 1.0.10
-django-unused     0.1.4
-Faker             19.6.2
-Pillow            10.0.1
-pip               23.2.1
-pyflakes          3.1.0
-python-dateutil   2.8.2
-sentry-sdk        1.31.0
-setuptools        65.5.1
-six               1.16.0
-sqlparse          0.4.4
-toml              0.10.2
-urllib3           2.0.5
-vulture           2.9.1
+Package                  Version
+------------------------ ------------
+asgiref                  3.7.2
+cachetools               5.3.1
+certifi                  2023.7.22
+charset-normalizer       3.3.0
+Django                   4.2.5
+django-admin-volt        1.0.10
+django-ckeditor          6.7.0
+django-filter            23.3
+django-js-asset          2.1.0
+django-unused            0.1.4
+Faker                    19.6.2
+google-api-core          2.12.0
+google-api-python-client 2.102.0
+google-auth              2.23.2
+google-auth-httplib2     0.1.1
+google-auth-oauthlib     1.1.0
+googleapis-common-protos 1.60.0
+gspread                  5.11.3
+httplib2                 0.22.0
+idna                     3.4
+numpy                    1.26.0
+oauth2client             4.1.3
+oauthlib                 3.2.2
+pandas                   2.1.1
+Pillow                   10.0.1
+pip                      23.2.1
+protobuf                 4.24.4
+pyasn1                   0.5.0
+pyasn1-modules           0.3.0
+pyflakes                 3.1.0
+pyparsing                3.1.1
+python-dateutil          2.8.2
+pytz                     2023.3.post1
+requests                 2.31.0
+requests-oauthlib        1.3.1
+rsa                      4.9
+sentry-sdk               1.31.0
+setuptools               65.5.1
+six                      1.16.0
+sqlparse                 0.4.4
+toml                     0.10.2
+tzdata                   2023.3
+uritemplate              4.1.1
+urllib3                  2.0.5
+vulture                  2.9.1
